# tauri-globshort-issue-min

./: Cargo.toml  tauri.conf.json
src/: main.rs
