[package]
name = "x11-globalshortcut-issue"
version = "0.1.0"
edition = "2021"
rust-version = "1.57"

# Needed to set up some things for Tauri at build time
[build-dependencies]
tauri-build = { version = "2.0.0-alpha.1", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha.3", features = ["api-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
